--- a/product1.html
+++ b/product1.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Page for product 1</h1>
+    <img src="https://drive.google.com/file/d/1PotllYPMIQOHlRvMue3yqliq9T4U5MR7/view?usp=sharing" alt="alternatetext">
     <h2>price: $5 </h2>
   </body>
 </html>
