Update and rename product1.html to alfa.html

--- a/alfa.html
+++ b/alfa.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Page for product 1</h1>
-    <img src="mmexport1563121136222 (1) (1).jpg" alt="alternatetext">
+    <img src="Alfa-Romeo-Stelvio-Q-performance-review-feature.jpg" alt="white">
     <h2>price: $5 </h2>
   </body>
 </html>
