--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <body>
     <h1>My homepage!</h1>
     
-    <h2>
-        ;)
-    </h2>
+    <li><a href="alfa.html">Alfa</a></li>
 
   </body>
 </html>
