--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>My homepage!</h1>
     
     <li><a href="alfa.html">Alfa</a></li>
+    <li><a href="infiniti.html">Alfa</a></li>
 
   </body>
 </html>
