--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 
   <body>
-    <h1>My homepage!</h1>
+    <h1>My Cars!</h1>
     
     <li><a href="alfa.html">Alfa</a></li>
-    <li><a href="infiniti.html">Alfa</a></li>
+    <li><a href="infiniti.html">Infiniti</a></li>
 
   </body>
 </html>
