--- a/alfa.html
+++ b/alfa.html
@@ -5,6 +5,6 @@
   <body>
     <h1>Page for product 1</h1>
     <img src="Alfa-Romeo-Stelvio-Q-performance-review-feature.jpg" alt="white">
-    <h2>price: $5 </h2>
+    <h2>price: $32k </h2>
   </body>
 </html>
