--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>My Cars!</h1>
     
     <li><a href="alfa.html">Alfa</a></li>
-    <li><a href="infiniti.html">Infiniti</a></li>
+    <li><a href="cars/infiniti.html">Infiniti</a></li>
 
   </body>
 </html>
