--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1>My Cars!</h1>
     
-    <li><a href="alfa.html">Alfa</a></li>
+    <li><a href="cars/alfa.html">Alfa</a></li>
     <li><a href="cars/infiniti.html">Infiniti</a></li>
 
   </body>
