--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 
   <body>
-    <h1>My Cars!</h1>
+    <h1>My Pages</h1>
     
-    <li><a href="cars/alfa.html">Alfa R</a></li>
+    <li><a href="cars/alfa.html">Alfa</a></li>
     <li><a href="cars/infiniti.html">Infiniti</a></li>
     <li><a href="eko/eko.html">Eko</a></li>
 
