--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -15,5 +15,6 @@
     <h1>Page for product 1</h1>
     <img src="Alfa-Romeo-Stelvio-Q-performance-review-feature.jpg" alt="white">
     <h2>price: $32k </h2>
+    <li><a href="checkout/checkout.html">Checkout</a></li>
   </body>
 </html>
