--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -15,5 +15,6 @@
     <h1>Page for product 2</h1>
     <img src="24646612294.jpg" alt="white">
     <h2>price: $37k </h2>
+    <li><a href="checkout/checkout.html">Checkout</a></li>
   </body>
 </html>
