--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -5,8 +5,18 @@
   w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e){var n="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=n;var i=document.createElement("script");i.type="text/javascript",i.async=!0,i.src=n+"?sdkid="+e+"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(i,a)};
 
 
-  ttq.load('BTOK3FORQH54JI5RBBU0');
+  ttq.load('BTQA5HORQH54JI5RES20');
   ttq.page();
+  ttq.instance('{BTQA5HORQH54JI5RES20}').track('Purchase'，{
+   contents: [
+    {
+      content_id: 'Alfa'，
+      quantity: 1 ，
+      price: 32000 ，
+    }]，
+    value: 32000，
+    currency: 'USD'，
+});
 }(window, document, 'ttq');
 </script>
     <title>Product 1</title>
