--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -7,6 +7,16 @@
 
   ttq.load('BTQA5HORQH54JI5RES20');
   ttq.page();
+  ttq.instance('BTQA5HORQH54JI5RES20').track('Purchase'，{
+   contents: [
+    {
+      content_id: 'Alfa'，
+      quantity: 1 ，
+      price: 32000 ，
+    }]，
+    value: 32000，
+    currency: 'USD'，
+});
 }(window, document, 'ttq');
 </script>
     <title>Product 1</title>
