--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -7,7 +7,7 @@
 
   ttq.load('BTQA5HORQH54JI5RES20');
   ttq.page();
-  ttq.instance('BTQA5HORQH54JI5RES20').track('Purchase'，{
+  ttq.track('Purchase'，{
    contents: [
     {
       content_id: 'Alfa'，
