--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -8,13 +8,7 @@
   ttq.load('BTQA5HORQH54JI5RES20');
   ttq.page();
   ttq.track('ViewContent'，{
-   contents: [
-    {
-      content_id: 'Alfa'，
-      quantity: 1 ，
-      price: 32000 ，
-    }]，
-    value: 32000，
+    value: '32000'，
     currency: 'USD'，
 });
 }(window, document, 'ttq');
