--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -9,6 +9,12 @@
   ttq.page();
 }(window, document, 'ttq');
 </script>
+ttq.track('ViewContent', {
+  value: '1'
+})
+ttq.instance('BTQA5HORQH54JI5RES20').track('ViewContent', {
+  value: '1'
+})
     <title>Product 1</title>
   </head>
   <body>
