--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -6,10 +6,9 @@
 
 
       ttq.load('BTQA5HORQH54JI5RES20');
-      ttq.page();
     }(window, document, 'ttq');
     </script>
-    ttq.instance('BTQA5HORQH54JI5RES20').track('ViewContent', {
+    ttq.track('ViewContent', {
          value: '1'
         })
   <title>Product 1</title>
