--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -6,6 +6,7 @@
 
 
       ttq.load('BTQA5HORQH54JI5RES20');
+      ttq.page()
     }(window, document, 'ttq');
     </script>
   <title>Product 1</title>
