--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -32,9 +32,11 @@
     <h2>price: $32k </h2>
     <li><a href="https://leordong.github.io/leo_rdong_web/checkout/checkout.html">Checkout</a></li>
     <input id="button" type="submit" name="button" value="enter"/>
-    if(document.getElementById('button').clicked == true)
-    {
-       alert("button was clicked");
-    }
+    <script>
+      if(document.getElementById('button').clicked == true)
+      {
+         alert("button was clicked");
+      }
+    </script>
   </body>
 </html>
