--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -36,6 +36,9 @@
     <script>
     function myFunction(elmnt,clr) {
       elmnt.style.color = clr;
+      ttq.track('Checkout', {
+        value: '1'
+      });
     }
     </script>
   </body>
