--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -31,7 +31,7 @@
     <img src="Alfa-Romeo-Stelvio-Q-performance-review-feature.jpg" alt="white">
     <h2>price: $32k </h2>
     <li><a href="https://leordong.github.io/leo_rdong_web/checkout/checkout.html">Checkout</a></li>
-    <p onclick="myFunction(this, 'red')">Click me to change my text color.</p>
+    <p onclick="myFunction(this, 'red')">Add to cart</p>
 
     <script>
     function myFunction(elmnt,clr) {
