--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -34,7 +34,7 @@
     <script>
     function myFunction() {
       alert( 'Clicked it!' )
-      ttq.track('Checkout', {
+      ttq.track('ViewContent', {
         value: '1'
       });
     }
