--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -29,7 +29,7 @@
   <body>
     <h1>Page for product 1</h1>
     <img src="Alfa-Romeo-Stelvio-Q-performance-review-feature.jpg" alt="white">
-    <h2>price: $32k </h2>
+    <h2>price: $32k onclick="myFunction()" </h2>
     <li><a href="https://leordong.github.io/leo_rdong_web/checkout/checkout.html" onclick="myFunction()"> Checkout</a></li>
     <script>
     function myFunction() {
