--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -39,5 +39,13 @@
       });
     }
     </script>
+    <script>
+    function myFunction() {
+      alert( 'Clicked it!' )
+      ttq.track('Checkout', {
+        value: '1'
+      });
+    }
+    </script>
   </body>
 </html>
