--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -40,10 +40,10 @@
     }
     </script>
     <script>
-      _taq.push({event_type:"form_detail", event_pixel_id:"123", event_pixel_code:"BTQA5HORQH54JI5RES20", advertiser_id:"123", data_type:2})
+      ttq.track({event_type:"form_detail", event_pixel_id:"123", event_pixel_code:"BTQA5HORQH54JI5RES20", advertiser_id:"123", data_type:2})
     </script>
      <script>
-      _taq.push({event_type:"form_detail", event_pixel_id:"123", event_pixel_code:"BTQA5HORQH54JI5RES20", advertiser_id:"123", data_type:2})
+      ttq.track({event_type:"form_detail", event_pixel_id:"123", event_pixel_code:"BTQA5HORQH54JI5RES20", advertiser_id:"123", data_type:2})
     </script>
   </body>
 </html>
