--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -7,21 +7,6 @@
 
       ttq.load('BTQA5HORQH54JI5RES20');
       ttq.page()
-      ttq.track('AddToCart', {
-   contents: [
-    {
-      content_id: 'product',
-      quantity: 1,
-      price: 8,
-    },
-    {
-      content_id: 'product',
-      quantity: 2,
-      price: 1.2,
-    }],
-    value: 9.2,
-    currency: 'USD',
-});
     }(window, document, 'ttq');
     </script>
   <title>Product 1</title>
@@ -40,10 +25,10 @@
     }
     </script>
     <script>
-      ttq.track('AddToCart', {value: '1'})
+      ttq.track('AddToCart', {value: '1'});
     </script>
      <script>
-      ttq.track('AddToCart', {value: '1'})
+      ttq.track('AddToCart', {value: '1'});
     </script>
   </body>
 </html>
