--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -32,6 +32,12 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5LZ94K"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    ttq.track('ViewContent', {
+    value: '1'
+      })
+      ttq.instance('BU5I1IDBQ1HOVJLH8L00').track('ViewContent', {
+        value: '1'
+      })
    
     <h1>Page for product 2</h1>
     <img src="24646612294.jpg" alt="white">
