--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -40,6 +40,14 @@
         value: '1'
       })
      </script>
+    <script>
+    ttq.track('ViewContent', {
+    value: '1'
+      })
+      ttq.instance('BU5I1IDBQ1HOVJLH8L00').track('ViewContent', {
+        value: '1'
+      })
+     </script>
    
     <h1>Page for product 2</h1>
     <img src="24646612294.jpg" alt="white">
