--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       ttq.track('Checkout', {
         value: '1'}
     })
+       ttq.instance('BU5Q7HFKFOS2799BIS3G').track('Checkout'), {
+       value: '1'
+    })
     </script>
     <h1>My Pages</h1>
     <li><a href="eko/eko.html">Eko</a></li>
