--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -19,5 +19,11 @@
 
   <body>
     <h1>Page for Checkout</h1>
+    <script>
+    ttq.instance('C0MRK8KP76SVVJ0VAT10').identify({
+        external_id: '123456',
+        email: 'dongx205@umn.edu',
+      });
+    <script>
   </body>
 </html>
