--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -10,6 +10,15 @@
       ttq.page();
     }(window, document, 'ttq');
     </script>
+    <script>
+    ttq.identify({
+        external_id: '123456',
+        email: 'dongx205@umn.edu',
+      });
+    ttq.track('AddToCart', {
+        value: '1'
+      });
+    <script>
     
 
     <title>My Homepage</title>
