--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -18,7 +18,7 @@
     ttq.track('AddToCart', {
         value: '1'
       });
-    <script>
+    </script>
     
 
     <title>My Homepage</title>
@@ -36,6 +36,6 @@
     ttq.track('Checkout', {
         value: '1'
       });
-    <script>
+    </script>
   </body>
 </html>
