--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -37,6 +37,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <img src="Alfa-Romeo-Stelvio-Q-performance-review-feature.jpg" alt="white">
     <h2><a onclick="myFunction()"</a> price: $32k</h2>
     <li><a href="https://leordong.github.io/leo_rdong_web/checkout/checkout.html" onclick="myFunction()"> Checkout</a></li>
+    
+    <script>
+      ttq.track('AddToCart');
+    </script>
     <script>
     function myFunction() {
       alert( 'Clicked it!' )
