--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -29,9 +29,11 @@
     </script>
     <!-- TikTok Pixel Code End -->
     
-    (function(root)
+   <!-- TPID=89905 -->
+<script type="text/javascript">(function(root)
 { var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.src = 'https://analytics.tiktok.com/i18n/pixel/sdk.js?sdkid=BUHI109LQKRCN7NEFMG0'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s); }
 )(window);
+</script>
     
    <h1>Page for product 2</h1>
     <img src="24646612294.jpg" alt="white">
