--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -29,8 +29,8 @@
     </script>
     <!-- TikTok Pixel Code End -->
     
-   <!-- TPID=89905 -->
-<script type="text/javascript">(function(root)
+<script type="text/javascript">
+  (function(root)
 { var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.src = 'https://analytics.tiktok.com/i18n/pixel/sdk.js?sdkid=BUHI109LQKRCN7NEFMG0'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s); }
 )(window);
 </script>
