--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -32,7 +32,7 @@ ttq.page();
 }(window, document, 'ttq');
 </script>
     
-<script type="text/javascript">
+<script>
   (function(root)
 { var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.src = 'https://analytics.tiktok.com/i18n/pixel/sdk.js?sdkid=BUHI109LQKRCN7NEFMG0'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s); }
 )(window);
