--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -26,12 +26,12 @@ for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.ins
 ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};var o=document.createElement("script");
 o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="e"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(o,a)};
 
-ttq.load('C24QPOQQV140ORDHPA0G');
+ttq.load('C288QV7MU8Q03RAIB5T0');
 ttq.page();
 }(window, document, 'ttq');
 </script>
     <script type="text/javascript">(function(root)
-{ var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.src = 'https://analytics.tiktok.com/i18n/pixel/sdk.js?sdkid=BUHI109LQKRCN7NEFMG0'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s); }
+{ var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.src = 'https://analytics.tiktok.com/i18n/pixel/sdk.js?sdkid=C288QV7MU8Q03RAIB5T0'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s); }
 )(window);
 </script>
     
