--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -29,6 +29,7 @@ o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="e"&lib="+t;var a=document.g
 ttq.load('C286KAQQV140ORDI20U0');
 ttq.page();
 }(window, document, 'ttq');
+</script>
 
       
 <script type="text/javascript">(function(root)
