--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -17,7 +17,7 @@
     <!-- End Google Tag Manager (noscript) -->
     
 <script type="text/javascript">(function(root)
-{ var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.src = 'https://analytics.tiktok.com/i18n/pixel/sdk.js?sdkid=C286KAQQV140ORDI20U0'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s); }
+{ var ta = document.createElement('script'); ta.type = 'text/javascript'; ta.async = true; ta.src = 'https://analytics.tiktok.com/i18n/pixel/sdk.js?sdkid=C286KAQQV140ORDI20U0'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ta, s); ttq.track('Checkout')}
 )(window);
 </script>
 
