--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
   ttq.load('C17ADCJAF71QPV1BLTH0');
+  ttq.enablecookie();
   ttq.page();
 }(window, document, 'ttq');
 </script>
