--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MJDSRJS"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+    <script>
     ttq.instance('C17ADCJAF71QPV1BLTH0').track('Browse')
+    </script>
     <h1>My Pages</h1>
+      
     <li><a href="eko/eko.html">Eko</a></li>
     <li><a href="cars/alfa.html">Alfa</a></li>
     <li><a href="cars/infiniti.html">Infiniti</a></li>
