--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <script>
-    ttq.instance('C17ADCJAF71QPV1BLTH0').track('Browse')
+    ttq.instance('C17ADCJAF71QPV1BLTH0').track('Browse');
     </script>
     <h1>My Pages</h1>
       
