--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <title>My Homepage</title>
     <link rel="stylesheet" href="css/styles.css">
+
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
+    /></noscript>
+<!-- End Facebook Pixel Code -->
   </head>
 
 
