--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="css/styles.css">
 
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=962965104505467&ev=Purchase"
-    /></noscript>
+    src="https://www.facebook.com/tr?id=962965104505467&ev=ViewContent
+        &cd[content_name]=ABC%20Leather%20Sandal
+        &cd[content_category]=Shoes
+        &cd[content_type]=product
+        &cd[content_ids]=1234
+        &cd[value]=0.50
+        &cd[currency]=USD" height="1" width="1" style="display:none"/>
+    </noscript>
 <!-- End Facebook Pixel Code -->
   </head>
 
