--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 <noscript>
   <img height="1" width="1" style="display:none" 
-       src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"/>
+       src="https://www.facebook.com/tr?id=962965104505467&ev=Purchase&noscript=1"/>
 </noscript>
 <!-- End Facebook Pixel Code -->
   </head>
