--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '962965104505467');
-  fbq('track', 'PageView');
+  fbq('track', 'ViewContent');
 </script>
 <noscript>
   <img height="1" width="1" style="display:none" 
