--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   fbq('init', '962965104505467');
   fbq('track', 'ViewContent');
 </script>
-  <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=962965104505467&ev=ViewContent&noscript=1"/>
+  <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=962965104505467&ev=Purchase&noscript=1"/>
 <!-- End Facebook Pixel Code -->
   </head>
 
