--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <title>My Homepage</title>
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Facebook Pixel Code -->
+    <!--
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -22,10 +22,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '962965104505467');
-  fbq('track', 'ViewContent');
-</script>
+  fbq('track', 'ViewContent'); 
+</script>End Facebook Pixel Code -->
+
   <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=962965104505467&ev=Purchase&noscript=1"/>
-<!-- End Facebook Pixel Code -->
   </head>
 
 
