--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     
 
-    <title>My Homepage</title>
+    <title>my.always.x1</title>
     <link rel="stylesheet" href="css/styles.css">
     <!--
 <script>
@@ -53,18 +53,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h1>My Pages</h1>
       
     <li><a href="eko/eko.html">Eko</a></li>
-    <li><a href="cars/alfa.html">Alfa</a></li>
-    <li><a href="cars/infiniti.html">Infiniti</a></li>
+    <li><a href="cars/alfa.html">Case Mate Slim Phone Cases</a></li>
+    <li><a href="cars/infiniti.html">Unisex Heavy Cotton Tee</a></li>
 
-	<script>
-		!function (w, d, t) {
-		  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="+e+"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(o,a)};
-		
-		  ttq.load('C33VRUVAB6QONQJMP6H0');
-		  ttq.page();
-		}(window, document, 'ttq');
-	</script>
-	
+
 
   </body>
 </html>
