--- a/cars/alfa.html
+++ b/cars/alfa.html
@@ -1,23 +1,12 @@
 <html>
   <head>
-   
-    
-<script>
-!function (w, d, t) {
-  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="+e+"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(o,a)};
-
-
-  ttq.load('C1DT8IPT0U322RQPE5UG');
-  ttq.page();
-  ttq.instance("C1DT8IPT0U322RQPE5UG").track("ViewContent", {"content_category":"Breland","content_name":"Breland","content_id":"7274e08b-39df-42b1-8a7f-b9687436565a"} ); }(window, document, 'ttq');
-</script>
 
       <title>Product 1</title>
   </head>
   <body>
-    <h1>Page for product 1</h1>
-    <img src="Alfa-Romeo-Stelvio-Q-performance-review-feature.jpg" alt="white">
-    <h2><a onclick="myFunction()"</a> price: $32k</h2>
+    <h1>Case Mate Slim Phone Cases</h1>
+    <img src="https://cdn.shopify.com/s/files/1/0286/0279/4056/products/05eb7b54db63176f13b8700147c8d995_2048x2048.jpg?v=1590270953" alt="white">
+    <h2><a onclick="myFunction()"</a> price: $24.63</h2>
     <li><a href="https://leordong.github.io/leo_rdong_web/checkout/checkout.html" onclick="myFunction()"> Checkout</a></li>
    
     <script>
