--- a/cars/infiniti.html
+++ b/cars/infiniti.html
@@ -25,9 +25,9 @@
 </script>
       
     
-   <h1>Page for product 2</h1>
-    <img src="24646612294.jpg" alt="white">
-    <h2>price: $37k </h2>
+   <h1>Unisex Heavy Cotton Tee</h1>
+    <img src="https://cdn.shopify.com/s/files/1/0286/0279/4056/products/aeeb41321b1787c2897d8e197b986042_470x.jpg?v=1590269592" alt="white">
+    <h2>price: $11.00 </h2>
     <li><a href="https://leordong.github.io/leo_rdong_web/checkout/checkout.html">Checkout</a></li>
   </body>
 </html>
