--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -58,7 +58,7 @@ src="https://www.facebook.com/tr?id=962965104505467&ev=PageView&noscript=1"
   }
   // end parameter object data
 );
-  </noscript>
+  </script>
   </head>
 
 
